--- a/C482/C482/nbproject/project.properties
+++ b/C482/C482/nbproject/project.properties
@@ -85,7 +85,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=C482
+javafx.main.class=AppBase.AppBase
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
