refactor: login now queries MySQL db to validate credentials

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /C482/C482/nbproject/private/
 /C482/C482/build/
 /C482/C482/dist/
+/C195/C195b/nbproject/private/
+/C195/C195b/build/
+/C195/C195b/dist/
